  - ppl6-config: Option "--features" unterstützt nun optionale Angabe der
    gewünschten Features. Ist ein Feature nicht eingebunden, wird eine
    ERROR-Meldung ausgegeben und der Returncode ist ungleich 0
  - Bugfix in MySQL::Query: Ein Fehlerfall beim Speichern des Query-Results
    wurde zwar festgestellt, aber kein passender Fehlercode gesetzt. 

Version 6.4.16 vom 19.05.2013	(SVN-Tag: REL_6_4_16)
  - Bugfix: Fehlende "IFDEF"'s zur Prüfung der Syslog-Unterstützung in CLog
    ergänzt (behebt Compiler-Fehler unter MinGW)
  - Bugfix: "Invalid read of size 1" in ppl6::CLog::Printf behoben
  - Bugfix: Memory-Leak in CSSL::~CSSL() gefixt
  - Bugfix: Diverse Memory-Leaks in CWString::Setf und CWString::Sprintf
    behoben
  - Neue Funktion: CleanupThreadData. Diese muss aufgerufen werden, bevor
    ein Thread, der nicht mittles der PPL-Funktionen gestartet wurde,
    beendet wird.
  - Bugfix: Memory-Leak in der Restschnittstelle behoben
  - Bugfix: Memory-Leak im Zusammenhang mit MySQL gefixt
  - Überflüssige Variablen in Trim-Funktionen der Klasse CWString entfernt
  - Bugfix: Fehler in CString::RTrim behoben, durch den zu wenig Zeichen am
    Ende des Strings abgeschnitten wurden (Backport von PPL7)
  - Bugfix: Fehler in CWString::RTrim behoben, durch den zu wenig Zeichen am
    Ende des Strings abgeschnitten wurden (Backport von PPL7)
  - Bugfix: Memory Leak und "silly malloc" in CString::PregMatch und
    CWString::PregMatch behoben
  - Testsuite um Tests für CString-Klasse ergänzt (Backport von PPL7)
  - Testsuite um Tests für CWString-Klasse ergänzt (Backport von PPL7)
  - CWString hat Konstruktor für std::wstring bekommen und Operator für
    std::ostream
  - Bugfix in CString::IsNumeric und CWString::IsNumeric
  - CWString: Vergleichsoperatoren für CWString und einige weitere Operatoren
    und Funktionen sind jetzt als "const" deklariert
  - Bugfix in CWString::Chomp: Es konnten zu viele Zeichen abgeschnitten werden